src/components/Navbar/Navbar.css
.nav__list {
  margin-right: 1.5em;
  display: flex;
}
.nav__list-item {
  margin-left: 1.5em;
}

.app .nav__hamburger {
  display: none;
}

.nav__theme {
  margin-top: 0.4em;
}

@media (max-width: 600px) {
  .nav__list {
    display: flex; 
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: fixed;
    inset: 0;
    width: 100%;
    height: 100%;
    z-index: 999; 
    background-color: var(--clr-bg); 
    gap: 2.5rem; 
  }

  .nav__list-item {
    margin: 0; 
  }

  .nav__list-item a {
    font-size: 1.8rem; 
    font-weight: 600;
    text-transform: uppercase;
    letter-spacing: 2px;
  }

  .app .nav__hamburger {
    display: flex;
    z-index: 1000; 
    position: relative; 
  }
}

